--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
     />
     <!-- Main CSS File -->
-    <link rel="stylesheet" href="/assets/css/main.css" />
+    <link rel="stylesheet" href="/Developer-Portfolio/assets/css/main.css" />
   </head>
   <body>
     <main>
