--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <p>Portfolio</p>
             <a data-bs-toggle="modal" data-bs-target="#exampleModal">
               <img
-                src="http://placehold.it/150x80?text=IMAGE"
+                src="https://placehold.it/150x80?text=IMAGE"
                 class="img-responsive"
                 alt="Image"
               />
@@ -104,7 +104,7 @@
             <p>Title</p>
             <a data-bs-toggle="modal" data-bs-target="#exampleModal">
               <img
-                src="http://placehold.it/150x80?text=IMAGE"
+                src="https://placehold.it/150x80?text=IMAGE"
                 class="img-responsive"
                 alt="Image"
               />
@@ -114,7 +114,7 @@
             <p>Title</p>
             <a data-bs-toggle="modal" data-bs-target="#exampleModal">
               <img
-                src="http://placehold.it/150x80?text=IMAGE"
+                src="https://placehold.it/150x80?text=IMAGE"
                 class="img-responsive"
                 alt="Image"
               />
