--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" /> -->
     <link
-      href="assets/vendor/bootstrap-icons/bootstrap-icons.css"
+      href="/Developer-Portfolio/assets/vendor/bootstrap-icons/bootstrap-icons.css"
       rel="stylesheet"
     />
     <!-- Main CSS File -->
@@ -84,7 +84,7 @@
             <p>Horiseon Webpage</p>
             <a data-bs-toggle="modal" data-bs-target="#horiseon-modal">
               <img
-                src="assets\img\Horiseon Full Page Part 1(Header).png"
+                src="\Developer-Portfolio\assets\img\Horiseon Full Page Part 1(Header).png"
                 class="img-responsive"
                 alt="Horiseon Image"
               />
