--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <p>Horiseon Webpage</p>
             <a data-bs-toggle="modal" data-bs-target="#horiseon-modal">
               <img
-                src="./assets/img/Horiseon Full Page Part 1(Header).png"
+                src="./assets/img/Horiseon.png"
                 class="img-responsive"
                 alt="Horiseon Image"
               />
@@ -94,7 +94,7 @@
             <p>Portfolio</p>
             <a data-bs-toggle="modal" data-bs-target="#exampleModal">
               <img
-                src="http://placehold.it/150x80?text=IMAGE"
+                src="./assets/img/placeHolder.png"
                 class="img-responsive"
                 alt="Image"
               />
@@ -104,7 +104,7 @@
             <p>Title</p>
             <a data-bs-toggle="modal" data-bs-target="#exampleModal">
               <img
-                src="http://placehold.it/150x80?text=IMAGE"
+                src="./assets/img/placeHolder.pngE"
                 class="img-responsive"
                 alt="Image"
               />
@@ -114,7 +114,7 @@
             <p>Title</p>
             <a data-bs-toggle="modal" data-bs-target="#exampleModal">
               <img
-                src="http://placehold.it/150x80?text=IMAGE"
+                src="./assets/img/placeHolder.png"
                 class="img-responsive"
                 alt="Image"
               />
