--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <p>Title</p>
             <a data-bs-toggle="modal" data-bs-target="#exampleModal">
               <img
-                src="./assets/img/placeHolder.pngE"
+                src="./assets/img/placeHolder.png"
                 class="img-responsive"
                 alt="Image"
               />
