--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
       <div
         class="modal-dialog modal-dialog-centered modal-dialog-scrollable"
       >
+      <!-- Horiseon Project Modal  -->
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="horiseon-modalLabel">Horiseon Web Page</h5>
@@ -154,7 +155,7 @@
               <div class="jumbotron">
                 <h5>Description</h5>
                 <hr class="my-4" />
-                <p>The description of this project</p>
+                <p>This project emphasizes my ability to write stable HTML and CSS code. This assignmets also details my ablilty to meet client criteria for websites. </p>
               </div>
             </section>
           </div>
