Header html edit

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html class="no-js" lang="">
+<!-- Html Header -->
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -232,7 +233,7 @@
             <h2 class="Portfolio">Let's Get in Touch</h2>
             <br />
             <p>2406 Blackwolf Run Lane</p>
-            <p>Durham, NC 27604</p>
+            <p>Raleigh, NC 27604</p>
             <p>919-80*-****</p>
             <p>ernestpaul88@gmail.com</p>
           </div>
