--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="description" content="add content here" />
-    <!-- Always include this line of code!!! -->le>
+    <!-- Always include this line of code!!! -->
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Earn The Developer</tit    <!-- Vendor CSS Files -->
