--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="description" content="add content here" />
     <!-- Always include this line of code!!! -->
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Earn The Developer</tit    <!-- Vendor CSS Files -->
+    <title>Earn The Developer</title>
+    <!-- Vendor CSS Files -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
     <link href="./assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link
