--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <p>Portfolio</p>
             <a data-bs-toggle="modal" data-bs-target="#exampleModal">
               <img
-                src="./assets/img/placeHolder.png"
+                src="./assets/img/Developer1.PNG"
                 class="img-responsive"
                 alt="Image"
               />
@@ -176,6 +176,7 @@
       </div>
     </div>
 
+     
       <!--  This is the Generic web page modal -->
       <div
       class="modal fade"
