--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                   <a class="nav-link" href="#About">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#portfolio-jumbo">Portfolio</a>
+                  <a class="nav-link" href="#portfolio-jumbo">Ernest's Portfolio</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#contact-me">Contact</a>
@@ -81,6 +81,8 @@
         <div class="row text-center">
           <h2 class="Portfolio">My Work</h2>
           <br />
+
+          <!-- Horiseon Project Visual -->
           <div class="img-portfolio col-sm-3">
             <p>Horiseon Webpage</p>
             <a data-bs-toggle="modal" data-bs-target="#horiseon-modal">
@@ -91,6 +93,8 @@
               />
             </a>
           </div>
+          
+          <!-- First Portfolio  -->
           <div class="img-portfolio col-sm-3">
             <p>Portfolio</p>
             <a data-bs-toggle="modal" data-bs-target="#exampleModal">
@@ -101,8 +105,10 @@
               />
             </a>
           </div>
+
+          <!-- Getting to know Ernest -->
           <div class="img-portfolio col-sm-3">
-            <p>Title</p>
+            <p>Getting to know Ernest</p>
             <a data-bs-toggle="modal" data-bs-target="#exampleModal">
               <img
                 src="./assets/img/placeHolder.png"
@@ -176,7 +182,6 @@
       </div>
     </div>
 
-     
       <!--  This is the Generic web page modal -->
       <div
       class="modal fade"
