--- a/index.html
+++ b/index.html
@@ -111,12 +111,14 @@
             <p>Getting to know Ernest</p>
             <a data-bs-toggle="modal" data-bs-target="#exampleModal">
               <img
-                src="./assets/img/placeHolder.png"
-                class="img-responsive"
+              src="./assets/img/Ernest.jpg"
+               class="img-responsive"
                 alt="Image"
               />
             </a>
           </div>
+
+          <!-- Model Column -->
           <div class="img-portfolio col-sm-3">
             <p>Title</p>
             <a data-bs-toggle="modal" data-bs-target="#exampleModal">
@@ -181,6 +183,7 @@
         </div>
       </div>
     </div>
+
 
       <!--  This is the Generic web page modal -->
       <div
