--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
 
           <!-- Getting to know Ernest -->
           <div class="img-portfolio col-sm-3">
-            <p>Getting to know Ernest</p>
+            <p>Shopping With Crypto</p>
             <a data-bs-toggle="modal" data-bs-target="#exampleModal">
               <img
-              src="./assets/img/Ernest.jpg"
+              src="./assets/img/Screenshot2-desktop.PNG"
                class="img-responsive"
                 alt="Image"
               />
