Shop With Crypto

--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
             </a>
           </div>
 
-          <!-- Getting to know Ernest -->
+          <!-- Shopping with Crypto -->
           <div class="img-portfolio col-sm-3">
             <p>Shopping With Crypto</p>
-            <a data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <a data-bs-toggle="modal" data-bs-target="#cryptoModal">
               <img
               src="./assets/img/Screenshot2-desktop.PNG"
                class="img-responsive"
@@ -233,6 +233,60 @@
         </div>
       </div>
     </div>
+
+
+
+          <!--  Shopping with Crypto Modal -->
+          <div
+          class="modal fade"
+          id="cryptoModal"
+          tabindex="-1"
+          aria-labelledby="cryptoModalLabel"
+          aria-hidden="true"
+        >
+          <div
+            class="modal-dialog modal-dialog-centered modal-dialog-scrollable"
+          >
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="cryptoModalLabel">Shopping With Crypto</h5>
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="modal"
+                  aria-label="Close"
+                ></button>
+              </div>
+              <div class="modal-body">
+                <section id="img-crypto" class="container">
+                  <div class="jumbotron"></div>
+                </section>
+                <section id="modal-descrip" class="container">
+                  <div class="jumbotron">
+                    <h5>Description</h5>
+                    <hr class="my-4" />
+                    <p>With the Crypto space heating up, people want to know what they can buy with their cryptocurrencies.
+                      Our website allows users to search for common products, and display their price in dollars and the equivalent in Bitcoin, Ehtereum, Binance Coin, Cardano and Solana(Top 5 Cryptos by Market Cap).
+                      Searches are persistent across sessions, so you can pick up where you left off.</p>
+                  </div>
+                </section>
+              </div>
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  data-bs-dismiss="modal"
+                >
+                  Close
+                </button>
+                <a href="https://gordonlc18.github.io/shopping_with_bitcoin/" target="_blank">
+                  <button type="button" class="btn btn-primary">Github</button>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </section>
 
       <!------- contact---->
