new Shop With Crypto

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
               </div>
               <div class="modal-body">
                 <section id="img-crypto" class="container">
-                  <div class="jumbotron"></div>
+                  <div class="jumbotron modal-crypto-jumbo"></div>
                 </section>
                 <section id="modal-descrip" class="container">
                   <div class="jumbotron">
