--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
             </a>
           </div>
 
-          <!-- Model Column -->
+          <!-- Travel Log -->
           <div class="img-portfolio col-sm-3">
-            <p>Title</p>
-            <a data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <p>Travel Log</p>
+            <a data-bs-toggle="modal" data-bs-target="#travelLogModal">
               <img
-                src="./assets/img/placeHolder.png"
+                src="./assets/img/travel-log-screen.png"
                 class="img-responsive"
                 alt="Image"
               />
@@ -236,8 +236,8 @@
 
 
 
-          <!--  Shopping with Crypto Modal -->
-          <div
+    <!--  Shopping with Crypto Modal -->
+    <div
           class="modal fade"
           id="cryptoModal"
           tabindex="-1"
@@ -287,6 +287,55 @@
           </div>
         </div>
 
+
+    <!--  Travel Log Modal -->
+    <div
+    class="modal fade"
+    id="travelLogModal"
+    tabindex="-1"
+    aria-labelledby="exampleModalLabel"
+    aria-hidden="true"
+  >
+    <div
+      class="modal-dialog modal-dialog-centered modal-dialog-scrollable"
+    >
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Travel Log</h5>
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="modal"
+            aria-label="Close"
+          ></button>
+        </div>
+        <div class="modal-body">
+          <section id="img-travel" class="container">
+            <div class="jumbotron modal-jumbo"></div>
+          </section>
+          <section id="modal-descrip" class="container">
+            <div class="jumbotron">
+              <h5>Description</h5>
+              <hr class="my-4" />
+              <p>A full-stack web app that allows users to log the destinations they have visited.</p>
+            </div>
+          </section>
+        </div>
+        <div class="modal-footer">
+          <button
+            type="button"
+            class="btn btn-secondary"
+            data-bs-dismiss="modal"
+          >
+            Close
+          </button>
+          <a href="https://github.com/adambowers09/project2/" target="_blank">
+            <button type="button" class="btn btn-primary">Github</button>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
       </section>
 
       <!------- contact---->
